--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 </head>
 <body>
     <h1> Arrays</h1>
+
+    <div>
+        <ul>
+            <li><a href="#">item1-</a></li>
+            <li><a href="#">item2-</a></li>
+            <li><a href="#">item3-</a></li>
+            <li><a href="#">item4-</a></li>
+            <li><a href="#">item5-</a></li>
+        </ul>
+    </div>
     
 </body>
 </html>
