tem um ero no html - rever!!!

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 
     <footer class = "rodape">
         <span>Rodapé</span>
-        
+        <button value="10" onclick="console.log(`Resultado ${soma(this.value)}`)>Click</button>
+
     </footer>
   
     
