exercícios lampada, troca imagem + formulários

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
         </aside>
         
         <section class="central">
+            <div>
+                <img src="img/pic_bulboff.gif" alt="">
+            </div>
+
+            <button>LIGAR</button> 
 
             <span>Conteúdo</span>
 
@@ -37,6 +42,30 @@
 
 
         </aside>
+    </div>
+
+    <div class="info">
+
+        <form action="index.html" method="get" onsubmit="return false">
+            <fieldset>
+                <legend>LOGIN</legend>
+                <div>
+                    <label for="idUser">Usuário</label>
+                    <input type="text" name="nmUser" id="idUser" placeHolder="Usuário">
+                </div>
+
+                <div>
+                    <label for="idPass">Senha</label>
+                    <input type="password" name="txtPass" id="idPass" placeHolder="Senha">
+                </div>
+
+                <div>
+                    <button type="button">LOGIN</button>
+                </div>
+            </fieldset>
+        </form>
+
+
     </div>
 
     <footer class = "rodape">
